--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -16,6 +16,17 @@
       <td>email,username,current_password,password,password_confirmation et authentication_token en get: que des strings</td>
 	  </tr>
 	</table>
+   <style type="text/css">
+      table
+      {
+         border-collapse: collapse;
+
+      }
+      td, th /* Mettre une bordure sur les td ET les th */
+      {
+         border: 1px solid black;
+      }
+   </style>
 
 
 
